crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF046_RUF046.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:10:1
   |
 8 | ### Safely fixable
 9 |
10 | int(id())
   | ^^^^^^^^^
11 | int(len([]))
12 | int(ord(foo))
   |
help: Remove unnecessary `int` call
   |
10 - int(id())
10 + id()
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:11:1
   |
10 | int(id())
11 | int(len([]))
   | ^^^^^^^^^^^^
12 | int(ord(foo))
13 | int(hash(foo, bar))
   |
help: Remove unnecessary `int` call
   |
11 - int(len([]))
11 + len([])
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:12:1
   |
10 | int(id())
11 | int(len([]))
12 | int(ord(foo))
   | ^^^^^^^^^^^^^
13 | int(hash(foo, bar))
14 | int(int(''))
   |
help: Remove unnecessary `int` call
   |
12 - int(ord(foo))
12 + ord(foo)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:13:1
   |
11 | int(len([]))
12 | int(ord(foo))
13 | int(hash(foo, bar))
   | ^^^^^^^^^^^^^^^^^^^
14 | int(int(''))
   |
help: Remove unnecessary `int` call
   |
13 - int(hash(foo, bar))
13 + hash(foo, bar)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:14:1
   |
12 | int(ord(foo))
13 | int(hash(foo, bar))
14 | int(int(''))
   | ^^^^^^^^^^^^
15 |
16 | int(math.comb())
   |
help: Remove unnecessary `int` call
   |
14 - int(int(''))
14 + int('')
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:16:1
   |
14 | int(int(''))
15 |
16 | int(math.comb())
   | ^^^^^^^^^^^^^^^^
17 | int(math.factorial())
18 | int(math.gcd())
   |
help: Remove unnecessary `int` call
   |
16 - int(math.comb())
16 + math.comb()
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:17:1
   |
16 | int(math.comb())
17 | int(math.factorial())
   | ^^^^^^^^^^^^^^^^^^^^^
18 | int(math.gcd())
19 | int(math.lcm())
   |
help: Remove unnecessary `int` call
   |
17 - int(math.factorial())
17 + math.factorial()
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:18:1
   |
16 | int(math.comb())
17 | int(math.factorial())
18 | int(math.gcd())
   | ^^^^^^^^^^^^^^^
19 | int(math.lcm())
20 | int(math.isqrt())
   |
help: Remove unnecessary `int` call
   |
18 - int(math.gcd())
18 + math.gcd()
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:19:1
   |
17 | int(math.factorial())
18 | int(math.gcd())
19 | int(math.lcm())
   | ^^^^^^^^^^^^^^^
20 | int(math.isqrt())
21 | int(math.perm())
   |
help: Remove unnecessary `int` call
   |
19 - int(math.lcm())
19 + math.lcm()
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:20:1
   |
18 | int(math.gcd())
19 | int(math.lcm())
20 | int(math.isqrt())
   | ^^^^^^^^^^^^^^^^^
21 | int(math.perm())
   |
help: Remove unnecessary `int` call
   |
20 - int(math.isqrt())
20 + math.isqrt()
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:21:1
   |
19 | int(math.lcm())
20 | int(math.isqrt())
21 | int(math.perm())
   | ^^^^^^^^^^^^^^^^
22 |
23 | int(round(1, 0))
   |
help: Remove unnecessary `int` call
   |
21 - int(math.perm())
21 + math.perm()
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:23:1
   |
21 | int(math.perm())
22 |
23 | int(round(1, 0))
   | ^^^^^^^^^^^^^^^^
24 | int(round(1, 10))
   |
help: Remove unnecessary `int` call
   |
23 - int(round(1, 0))
23 + round(1, 0)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:24:1
   |
23 | int(round(1, 0))
24 | int(round(1, 10))
   | ^^^^^^^^^^^^^^^^^
25 |
26 | int(round(1))
   |
help: Remove unnecessary `int` call
   |
24 - int(round(1, 10))
24 + round(1, 10)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:26:1
   |
24 | int(round(1, 10))
25 |
26 | int(round(1))
   | ^^^^^^^^^^^^^
27 | int(round(1, None))
   |
help: Remove unnecessary `int` call
   |
26 - int(round(1))
26 + round(1)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:27:1
   |
26 | int(round(1))
27 | int(round(1, None))
   | ^^^^^^^^^^^^^^^^^^^
28 |
29 | int(round(1.))
   |
help: Remove unnecessary `int` call
   |
27 - int(round(1, None))
27 + round(1, None)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:29:1
   |
27 | int(round(1, None))
28 |
29 | int(round(1.))
   | ^^^^^^^^^^^^^^
30 | int(round(1., None))
   |
help: Remove unnecessary `int` call
   |
29 - int(round(1.))
29 + round(1.)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:30:1
   |
29 | int(round(1.))
30 | int(round(1., None))
   | ^^^^^^^^^^^^^^^^^^^^
31 |
32 | int(1)
   |
help: Remove unnecessary `int` call
   |
30 - int(round(1., None))
30 + round(1., None)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:32:1
   |
30 | int(round(1., None))
31 |
32 | int(1)
   | ^^^^^^
33 | int(v := 1)
34 | int(~1)
   |
help: Remove unnecessary `int` call
   |
32 - int(1)
32 + 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:33:1
   |
32 | int(1)
33 | int(v := 1)
   | ^^^^^^^^^^^
34 | int(~1)
35 | int(-1)
   |
help: Remove unnecessary `int` call
   |
33 - int(v := 1)
33 + (v := 1)
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:34:1
   |
32 | int(1)
33 | int(v := 1)
34 | int(~1)
   | ^^^^^^^
35 | int(-1)
36 | int(+1)
   |
help: Remove unnecessary `int` call
   |
34 - int(~1)
34 + ~1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:35:1
   |
33 | int(v := 1)
34 | int(~1)
35 | int(-1)
   | ^^^^^^^
36 | int(+1)
   |
help: Remove unnecessary `int` call
   |
35 - int(-1)
35 + -1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:36:1
   |
34 | int(~1)
35 | int(-1)
36 | int(+1)
   | ^^^^^^^
37 |
38 | int(1 + 1)
   |
help: Remove unnecessary `int` call
   |
36 - int(+1)
36 + +1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:38:1
   |
36 | int(+1)
37 |
38 | int(1 + 1)
   | ^^^^^^^^^^
39 | int(1 - 1)
40 | int(1 * 1)
   |
help: Remove unnecessary `int` call
   |
38 - int(1 + 1)
38 + 1 + 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:39:1
   |
38 | int(1 + 1)
39 | int(1 - 1)
   | ^^^^^^^^^^
40 | int(1 * 1)
41 | int(1 % 1)
   |
help: Remove unnecessary `int` call
   |
39 - int(1 - 1)
39 + 1 - 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:40:1
   |
38 | int(1 + 1)
39 | int(1 - 1)
40 | int(1 * 1)
   | ^^^^^^^^^^
41 | int(1 % 1)
42 | int(1 ** 1)
   |
help: Remove unnecessary `int` call
   |
40 - int(1 * 1)
40 + 1 * 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:41:1
   |
39 | int(1 - 1)
40 | int(1 * 1)
41 | int(1 % 1)
   | ^^^^^^^^^^
42 | int(1 ** 1)
43 | int(1 << 1)
   |
help: Remove unnecessary `int` call
   |
41 - int(1 % 1)
41 + 1 % 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:42:1
   |
40 | int(1 * 1)
41 | int(1 % 1)
42 | int(1 ** 1)
   | ^^^^^^^^^^^
43 | int(1 << 1)
44 | int(1 >> 1)
   |
help: Remove unnecessary `int` call
   |
42 - int(1 ** 1)
42 + 1 ** 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:43:1
   |
41 | int(1 % 1)
42 | int(1 ** 1)
43 | int(1 << 1)
   | ^^^^^^^^^^^
44 | int(1 >> 1)
45 | int(1 | 1)
   |
help: Remove unnecessary `int` call
   |
43 - int(1 << 1)
43 + 1 << 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:44:1
   |
42 | int(1 ** 1)
43 | int(1 << 1)
44 | int(1 >> 1)
   | ^^^^^^^^^^^
45 | int(1 | 1)
46 | int(1 ^ 1)
   |
help: Remove unnecessary `int` call
   |
44 - int(1 >> 1)
44 + 1 >> 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:45:1
   |
43 | int(1 << 1)
44 | int(1 >> 1)
45 | int(1 | 1)
   | ^^^^^^^^^^
46 | int(1 ^ 1)
47 | int(1 & 1)
   |
help: Remove unnecessary `int` call
   |
45 - int(1 | 1)
45 + 1 | 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:46:1
   |
44 | int(1 >> 1)
45 | int(1 | 1)
46 | int(1 ^ 1)
   | ^^^^^^^^^^
47 | int(1 & 1)
48 | int(1 // 1)
   |
help: Remove unnecessary `int` call
   |
46 - int(1 ^ 1)
46 + 1 ^ 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:47:1
   |
45 | int(1 | 1)
46 | int(1 ^ 1)
47 | int(1 & 1)
   | ^^^^^^^^^^
48 | int(1 // 1)
   |
help: Remove unnecessary `int` call
   |
47 - int(1 & 1)
47 + 1 & 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:48:1
   |
46 | int(1 ^ 1)
47 | int(1 & 1)
48 | int(1 // 1)
   | ^^^^^^^^^^^
49 |
50 | int(1 if ... else 2)
   |
help: Remove unnecessary `int` call
   |
48 - int(1 // 1)
48 + 1 // 1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:50:1
   |
48 | int(1 // 1)
49 |
50 | int(1 if ... else 2)
   | ^^^^^^^^^^^^^^^^^^^^
51 |
52 | int(1 and 0)
   |
help: Remove unnecessary `int` call
   |
50 - int(1 if ... else 2)
50 + 1 if ... else 2
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:52:1
   |
50 | int(1 if ... else 2)
51 |
52 | int(1 and 0)
   | ^^^^^^^^^^^^
53 | int(0 or -1)
   |
help: Remove unnecessary `int` call
   |
52 - int(1 and 0)
52 + 1 and 0
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:53:1
   |
52 | int(1 and 0)
53 | int(0 or -1)
   | ^^^^^^^^^^^^
help: Remove unnecessary `int` call
   |
53 - int(0 or -1)
53 + 0 or -1
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:56:4
   |
56 | if int(1 + 2) * 3:
   |    ^^^^^^^^^^
57 |     ...
   |
help: Remove unnecessary `int` call
   |
56 - if int(1 + 2) * 3:
56 + if (1 + 2) * 3:
   |

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:62:1
   |
60 | ### Unsafe
61 |
62 | int(math.ceil())
   | ^^^^^^^^^^^^^^^^
63 | int(math.floor())
64 | int(math.trunc())
   |
help: Remove unnecessary `int` call
   |
62 - int(math.ceil())
62 + math.ceil()
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:63:1
   |
62 | int(math.ceil())
63 | int(math.floor())
   | ^^^^^^^^^^^^^^^^^
64 | int(math.trunc())
   |
help: Remove unnecessary `int` call
   |
63 - int(math.floor())
63 + math.floor()
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:64:1
   |
62 | int(math.ceil())
63 | int(math.floor())
64 | int(math.trunc())
   | ^^^^^^^^^^^^^^^^^
65 |
66 | int(round(inferred_int, 0))
   |
help: Remove unnecessary `int` call
   |
64 - int(math.trunc())
64 + math.trunc()
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:66:1
   |
64 | int(math.trunc())
65 |
66 | int(round(inferred_int, 0))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
67 | int(round(inferred_int, 10))
   |
help: Remove unnecessary `int` call
   |
66 - int(round(inferred_int, 0))
66 + round(inferred_int, 0)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:67:1
   |
66 | int(round(inferred_int, 0))
67 | int(round(inferred_int, 10))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
68 |
69 | int(round(inferred_int))
   |
help: Remove unnecessary `int` call
   |
67 - int(round(inferred_int, 10))
67 + round(inferred_int, 10)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:69:1
   |
67 | int(round(inferred_int, 10))
68 |
69 | int(round(inferred_int))
   | ^^^^^^^^^^^^^^^^^^^^^^^^
70 | int(round(inferred_int, None))
   |
help: Remove unnecessary `int` call
   |
69 - int(round(inferred_int))
69 + round(inferred_int)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:70:1
   |
69 | int(round(inferred_int))
70 | int(round(inferred_int, None))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
71 |
72 | int(round(inferred_float))
   |
help: Remove unnecessary `int` call
   |
70 - int(round(inferred_int, None))
70 + round(inferred_int, None)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:72:1
   |
70 | int(round(inferred_int, None))
71 |
72 | int(round(inferred_float))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
73 | int(round(inferred_float, None))
   |
help: Remove unnecessary `int` call
   |
72 - int(round(inferred_float))
72 + round(inferred_float)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:73:1
   |
72 | int(round(inferred_float))
73 | int(round(inferred_float, None))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
74 |
75 | int(round(unknown))
   |
help: Remove unnecessary `int` call
   |
73 - int(round(inferred_float, None))
73 + round(inferred_float, None)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:75:1
   |
73 | int(round(inferred_float, None))
74 |
75 | int(round(unknown))
   | ^^^^^^^^^^^^^^^^^^^
76 | int(round(unknown, None))
   |
help: Remove unnecessary `int` call
   |
75 - int(round(unknown))
75 + round(unknown)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
  --> RUF046.py:76:1
   |
75 | int(round(unknown))
76 | int(round(unknown, None))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
help: Remove unnecessary `int` call
   |
76 - int(round(unknown, None))
76 + round(unknown, None)
   |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:158:1
    |
156 |   int(1. if ... else .2)
157 |
158 | / int(1 +
159 | |     1)
    | |______^
160 |
161 |   int(round(1,
    |
help: Remove unnecessary `int` call
    |
158 + (1 +
159 +     1)
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:161:1
    |
159 |       1)
160 |
161 | / int(round(1,
162 | |           0))
    | |_____________^
163 |
164 |   # function calls may need to retain parentheses
    |
help: Remove unnecessary `int` call
    |
161 + round(1,
162 +           0)
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:168:1
    |
166 |   # lie on the next line.
167 |   # See https://github.com/astral-sh/ruff/issues/15263
168 | / int(round
169 | | (1))
    | |____^
170 |
171 |   int(round # a comment
    |
help: Remove unnecessary `int` call
    |
168 + (round
169 + (1))
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:171:1
    |
169 |   (1))
170 |
171 | / int(round # a comment
172 | | # and another comment
173 | | (10)
174 | | )
    | |_^
175 |
176 |   int(round (17)) # this is safe without parens
    |
help: Remove unnecessary `int` call
    |
171 + (round # a comment
172 + # and another comment
173 + (10))
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:176:1
    |
174 | )
175 |
176 | int(round (17)) # this is safe without parens
    | ^^^^^^^^^^^^^^^
177 |
178 | int( round (
    |
help: Remove unnecessary `int` call
    |
176 - int(round (17)) # this is safe without parens
176 + round (17) # this is safe without parens
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:178:1
    |
176 |   int(round (17)) # this is safe without parens
177 |
178 | / int( round (
179 | |                 17
180 | |             )) # this is also safe without parens
    | |______________^
181 |
182 |   int((round)  # Comment
    |
help: Remove unnecessary `int` call
    |
178 + round (
179 +                 17
180 ~             ) # this is also safe without parens
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:182:1
    |
180 |               )) # this is also safe without parens
181 |
182 | / int((round)  # Comment
183 | | (42)
184 | | )
    | |_^
185 |
186 |   int((round  # Comment
    |
help: Remove unnecessary `int` call
    |
182 + ((round)  # Comment
183 + (42))
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:186:1
    |
184 |   )
185 |
186 | / int((round  # Comment
187 | | )(42)
188 | | )
    | |_^
189 |
190 |   int(  # Unsafe fix because of this comment
    |
help: Remove unnecessary `int` call
    |
186 + (round  # Comment
187 + )(42)
    |

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:190:1
    |
188 |   )
189 |
190 | / int(  # Unsafe fix because of this comment
191 | | (  # Comment
192 | |     (round
193 | | )  # Comment
194 | | )(42)
195 | | )
    | |_^
196 |
197 |   int(
    |
help: Remove unnecessary `int` call
    |
190 + (  # Comment
191 +     (round
192 + )  # Comment
193 + )(42)
    |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:197:1
    |
195 |   )
196 |
197 | / int(
198 | |     round(
199 | |         42
200 | |     ) # unsafe fix because of this comment
201 | | )
    | |_^
202 |
203 |   int(
    |
help: Remove unnecessary `int` call
    |
197 + round(
198 +         42
199 +     )
    |
note: This is an unsafe fix and may change runtime behavior

RUF046 [*] Value being cast to `int` is already an integer
   --> RUF046.py:203:1
    |
201 |   )
202 |
203 | / int(
204 | |     round(
205 | |         42
206 | |     ) 
207 | | # unsafe fix because of this comment
208 | | )
    | |_^
help: Remove unnecessary `int` call
    |
203 + round(
204 +         42
205 +     )
    |
note: This is an unsafe fix and may change runtime behavior
