crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF046_RUF046_CR.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF046 [*] Value being cast to `int` is already an integer
 --> RUF046_CR.py:1:1
  |
1 | / int(-
2 | |     1) # Carriage return as newline
  | |______^
help: Remove unnecessary `int` call
  |
1 - int(-␍    1) # Carriage return as newline␍
1 + (-␍    1) # Carriage return as newline␍
  |
