crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF046_RUF046_LF.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF046 [*] Value being cast to `int` is already an integer
 --> RUF046_LF.py:2:1
  |
1 |   # \n as newline
2 | / int(-
3 | |     1)
  | |______^
help: Remove unnecessary `int` call
  |
2 + (-
3 +     1)
  |
