crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF047_RUF047_if.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF047 [*] Empty `else` clause
 --> RUF047_if.py:5:1
  |
3 |   if False:
4 |       condition_is_not_evaluated()
5 | / else:
6 | |     pass
  | |________^
help: Remove the `else` clause
  |
5 - else:
6 -     pass
  |

RUF047 [*] Empty `else` clause
  --> RUF047_if.py:11:1
   |
 9 |   if this_comment():
10 |       belongs_to()  # `if`
11 | / else:
12 | |     ...
   | |_______^
help: Remove the `else` clause
   |
11 - else:
12 -     ...
   |

RUF047 [*] Empty `else` clause
  --> RUF047_if.py:19:1
   |
17 |   elif the_same():
18 |       as_if()
19 | / else:
20 | |     pass
   | |________^
help: Remove the `else` clause
   |
19 - else:
20 -     pass
   |

RUF047 [*] Empty `else` clause
  --> RUF047_if.py:26:1
   |
24 |       belongs()  # to
25 |         # `if`
26 | / else:
27 | |     pass
   | |________^
28 |
29 |   if this_second_comment():
   |
help: Remove the `else` clause
   |
26 - else:
27 -     pass
   |

RUF047 [*] Empty `else` clause
  --> RUF047_if.py:32:1
   |
30 |       belongs()  # to
31 |       # `if`
32 | / else:
33 | |     pass
   | |________^
help: Remove the `else` clause
   |
32 - else:
33 -     pass
   |

RUF047 [*] Empty `else` clause
  --> RUF047_if.py:44:1
   |
43 | if of_course: this()
44 | else: ...
   | ^^^^^^^^^
help: Remove the `else` clause
   |
44 - else: ...
   |

RUF047 [*] Empty `else` clause
  --> RUF047_if.py:49:1
   |
47 | if of_course:
48 |     this() # comment
49 | else: ...
   | ^^^^^^^^^
help: Remove the `else` clause
   |
49 - else: ...
   |

RUF047 [*] Empty `else` clause
  --> RUF047_if.py:55:5
   |
53 |       if a:
54 |           b()
55 | /     else:
56 | |         ...
   | |___________^
help: Remove the `else` clause
   |
55 -     else:
56 -         ...
   |
