crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF047_RUF047_while.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF047 [*] Empty `else` clause
 --> RUF047_while.py:6:1
  |
4 |       loop_body_is_not_checked()
5 |       break
6 | / else:
7 | |     pass
  | |________^
help: Remove the `else` clause
  |
6 - else:
7 -     pass
  |

RUF047 [*] Empty `else` clause
  --> RUF047_while.py:12:1
   |
10 |   while this_comment:
11 |       belongs_to()  # `for`
12 | / else:
13 | |     ...
   | |_______^
help: Remove the `else` clause
   |
12 - else:
13 -     ...
   |
