crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF048_RUF048.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF048 `__version__` may contain non-integral-like elements
 --> RUF048.py:4:7
  |
4 | tuple(map(int, __version__.split(".")))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

RUF048 `__version__` may contain non-integral-like elements
 --> RUF048.py:5:6
  |
5 | list(map(int, __version__.split(".")))
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

RUF048 `__version__` may contain non-integral-like elements
 --> RUF048.py:8:13
  |
8 | for part in map(int, __version__.split(sep=".")):
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
